:sparkles: feat: Implement getAllItems and getItemByKey with real logic (remove Swagger dummy data)